# launcher

./: .biomeignore  .gitignore  CONTEXT.md  Cargo.toml  DATABASE_ARCHITECTURE.md  DATABASE_GUIDE.md  INSTALLATION_FLOW_ANALYSIS.md  INSTANCE_MANAGEMENT_PLAN.md  LICENSE  NOTIFICATION_USAGE.md  PROJECT_REQUIREMENTS.md  QUICK_REFERENCE.md  README.md  biome.json  bun.lockb  crowdin.yml  design.md  package-lock.json  package.json  skills-lock.json  task.md  tsconfig.json  version_metadata.json  vesta.db
crates/piston-lib/: Cargo.toml  FORGE_NEOFORGE_IMPLEMENTATION.md  PISTON_METADATA.md  build_error.txt  check_errors.txt  check_output.txt
crates/piston-lib/examples/: test_install.rs
crates/piston-lib/src/: client.rs  lib.rs
crates/piston-lib/src/api/: embedded_skins.rs  minecraft_skins.rs  mod.rs  mojang.rs  player.rs
crates/piston-lib/src/auth/: mod.rs
crates/piston-lib/src/game/: java_policy.rs  mod.rs  runtime_plan.rs  runtime_preparation.rs
crates/piston-lib/src/game/installer/: cache.rs  config.rs  mod.rs  tests.rs  transaction.rs  types.rs  verifier.rs
crates/piston-lib/src/game/launcher/: arguments.rs  classifier.rs  classpath.rs  mod.rs  natives.rs  process.rs  registry.rs  types.rs  unified_manifest.rs  version_parser.rs
crates/piston-lib/src/game/manifest_cache/: mod.rs
crates/piston-lib/src/game/metadata/: blacklist.rs  cache.rs  fetcher.rs  mod.rs  types.rs
crates/piston-lib/src/game/modpack/: exporter.rs  manifest.rs  mod.rs  parser.rs  types.rs
crates/piston-lib/src/models/: common.rs
crates/piston-lib/src/models/api/: mod.rs
crates/piston-lib/src/utils/: hardware.rs  mod.rs  paths.rs  process.rs  stop_intent.rs  version.rs
crates/piston-lib/tests/: integration_natives_flow.rs  repair_apply.rs  repair_dry_run.rs  unified_manifest_tests.rs
vesta-launcher/src-tauri/: Cargo.toml  Info.plist  MIGRATION_GUIDE.md  build.rs  check_output.txt  diesel.toml  diesel_config.toml  diesel_vesta.toml  fix_vesta_rs.py  patch_schema.py  tauri.conf.json  test_output.txt  vesta-config.db  vesta.db
vesta-launcher/src-tauri/capabilities/: default.json
vesta-launcher/src-tauri/entitlements/: default.plist
vesta-launcher/src-tauri/icons/: icon.icns
vesta-launcher/src-tauri/migrations/2025-12-30-000001_create_vesta_tables/: up.sql
vesta-launcher/src-tauri/migrations/2025-12-30-000002_create_config_table/: down.sql  up.sql
vesta-launcher/src-tauri/migrations/2025-12-30-220444-0000_add_show_on_completion_to_notification/: up.sql
vesta-launcher/src-tauri/migrations/config/2025-12-30-000002_create_config_table/: up.sql
vesta-launcher/src-tauri/migrations/config/2025-12-31-035446-0000_add_theme_system_fields/: down.sql  up.sql
vesta-launcher/src-tauri/migrations/config/2026-01-05-180205-0000_add_theme_gradient_type/: down.sql  up.sql
vesta-launcher/src-tauri/migrations/config/2026-01-05-211358-0000_add_theme_border_width_to_config/: down.sql  up.sql
vesta-launcher/src-tauri/migrations/config/2026-01-06-003752-0000_add_onboarding_and_java_fields/: down.sql  up.sql
vesta-launcher/src-tauri/migrations/config/2026-02-10-223633-0000_add_gpu_selection/: down.sql  up.sql
vesta-launcher/src-tauri/migrations/config/2026-02-11-000000_add_discord_integration/: down.sql  up.sql
vesta-launcher/src-tauri/migrations/config/2026-02-23-034554-0000_add_auto_install_dependencies/: down.sql  up.sql
vesta-launcher/src-tauri/src/: logging.rs  main.rs  metadata_cache.rs  notifications.rs  schema.rs  sentry_init.rs  setup.rs
vesta-launcher/src-tauri/src/auth/: mod.rs  notification_actions.rs
vesta-launcher/src-tauri/src/commands/: app.rs  debug.rs  github.rs  instances.rs  keybindings.rs  launcher_imports.rs  mod.rs  modpacks.rs  notifications.rs  onboarding.rs  pinning.rs  resources.rs  screenshots.rs  shortcuts.rs  skins.rs  sync.rs  tasks.rs  themes.rs
vesta-launcher/src-tauri/src/discord/: manager.rs  mod.rs
vesta-launcher/src-tauri/src/instance/: launch_preparation.rs  lifecycle.rs  mod.rs  notification_actions.rs
vesta-launcher/src-tauri/src/launcher_import/: manager.rs  mod.rs  paths.rs  root_normalization.rs  types.rs
vesta-launcher/src-tauri/src/localization/: mod.rs
vesta-launcher/src-tauri/src/models/: account.rs  installed_resource.rs  instance.rs  instance_resource_update_check.rs  java.rs  mod.rs  notification.rs  notification_seen_item.rs  notification_subscription.rs  pinning.rs  resource.rs  resource_update.rs  saved_theme.rs  skin_history.rs  task_state.rs  tests.rs  user_version_tracking.rs
vesta-launcher/src-tauri/src/modpack/: engine.rs  mod.rs  state.rs  update.rs
vesta-launcher/src-tauri/src/notifications/: commands.rs  manager.rs  metadata_adapter.rs  mod.rs  models.rs  store.rs
vesta-launcher/src-tauri/src/resources/: ledger.rs  manager.rs  mod.rs  update_cache.rs  update_policy.rs  watcher.rs
vesta-launcher/src-tauri/src/schema/: config.rs  mod.rs  vesta.rs
vesta-launcher/src-tauri/src/startup/: accounts.rs  metadata.rs  mod.rs  processes.rs  recovery.rs  resources.rs  shell.rs  update_actions.rs  updates.rs
vesta-launcher/src-tauri/src/structs/: settings.rs
vesta-launcher/src-tauri/src/sync/: action_tree.rs  classifier.rs  differ.rs  hash_util.rs  manifest.rs  manifest_bootstrap.rs  merger.rs  mod.rs  paths.rs  safeguards.rs  staging.rs
vesta-launcher/src-tauri/src/tasks/: commands.rs  install.rs  maintenance.rs  manager.rs  manifest.rs  mod.rs  modpack_export.rs  notification_actions.rs  resource_download.rs  store.rs  sync_profiles.rs  update_modpack.rs
vesta-launcher/src-tauri/src/utils/: cape_cache.rs  crash_fixtures.rs  crash_parser.rs  data.rs  db.rs  db_manager.rs  dialog_manager.rs  file_drop.rs  hash.rs  hooks.rs  image.rs  instance_helpers.rs  instance_runtime.rs  java.rs  launch_intents.rs  logging.rs  manifest.rs  memory_policy.rs  mod.rs  network.rs  process_state.rs  sanitize.rs  sqlite.rs  storage.rs  task.rs  texture.rs  url.rs  version_tracking.rs  window_effects.rs  windows.rs
vesta-launcher/src-tauri/tests/: schemas_serialization.rs
(+719 files in other folders)
