[package]
name = "piston-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json", "stream"] }
serde_json = "1.0.145"
serde-xml-rs = "0.6"
anyhow = "1.0.100"
futures = "0.3"
sha1 = "0.10"
sha2 = "0.10"
zip = "2.2"
log = "0.4"
flate2 = "1.0"
tar = "0.4"
chrono = { version = "0.4.38", features = ["serde"] }
sysinfo = "0.37.2"
once_cell = "1.20.2"
tempfile = "3"

# OAuth2 and Microsoft authentication
oauth2 = "4.4.2"
minecraft-msa-auth = "0.4.0"

# reqwest 0.12 for minecraft-msa-auth compatibility
reqwest12 = { package = "reqwest", version = "0.12.26", features = ["json"] }
regex = "1.11.1"
dunce = "1.0"
uuid = { version = "1.10.0", features = ["v4"] }
url = "2.5.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
libc = "0.2"

[dev-dependencies]
which = "6.0"
