[package]
name = "piston-lib"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0.149"
serde-xml-rs = "0.8.2"
anyhow = "1.0"
thiserror = "2.0.18"
futures = "0.3"
sha1 = "0.10"
sha2 = "0.10"
zip = "7.2.0"
log = "0.4"
flate2 = "1.1"
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.38.0"
once_cell = "1.20"
tempfile = "3"
uuid = { version = "1.20", features = ["v3", "v4"] }
rand = "0.9.2"
shlex = "1.3"

# OAuth2 and Microsoft authentication
oauth2 = "4.4"
minecraft-msa-auth = "0.4"

# reqwest 0.12 for minecraft-msa-auth compatibility
reqwest12 = { package = "reqwest", version = "0.12.28", features = ["json"] }
regex = "1.11"
dunce = "1.0"
url = "2.5"
which = "8.0"

[dev-dependencies]
env_logger = "0.10"
wiremock = "0.6"
tokio-test = "0.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Foundation"] }

