[package]
name = "vesta-launcher"
version = "0.6.0"
description = "A Tauri App"
authors = ["Eatham532"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
piston-lib = { path = "../../crates/piston-lib" }
piston-macros = { path = "../../crates/piston-macros" }
slug = "0.1"

tauri = { version = "2.9.5", features = [
    "protocol-asset",
    "macos-private-api",
] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"

tauri-plugin-os = "2.3.2"
tauri-plugin-log = "2.7.1"
tauri-plugin-shell = "2.3.3"
tauri-plugin-deep-link = "2"

anyhow = "1.0.100"
anyhow-tauri = "1.0.0"
thiserror = "2.0.17"
chrono = "0.4.38"
log = "0.4.28"

rusqlite = { version = "0.37.0", features = ["bundled"] }
serde_rusqlite = "0.40.1"

directories = "6.0.0"
version-compare = "0.2.0"
open = "5.3.1"
urlencoding = "2.1"
which = "6.0"
sysinfo = "0.37.2"

# OAuth2 and Microsoft authentication
oauth2 = "4.4.2"
minecraft-msa-auth = "0.4.0"
lazy_static = "1.5"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.1"

[target."cfg(target_os = \"windows\")".dependencies]
winver = "1.0.0"
