[package]
name = "vesta-launcher"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
diesel = { version = "2.3.6", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.3.1"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
dotenvy = "0.15"

[dependencies]
piston-lib = { path = "../../crates/piston-lib" }
slug = "0.1"

# Database - Diesel ORM
diesel = { version = "2.3.6", features = ["sqlite", "r2d2", "64-column-tables", "chrono"] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }

tauri = { version = "2.10.1", features = [
    "protocol-asset",
    "macos-private-api",
    "tray-icon",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3"

tauri-plugin-os = "2"
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2.3.4"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-deep-link = "2"
tauri-plugin-macos-permissions = "2"
tauri-plugin-updater = "2.9.0"


anyhow = "1.0"
anyhow-tauri = "1.0.0"
thiserror = "2.0.18"
chrono = "0.4"
log = "0.4"

directories = "6.0.0"
version-compare = "0.2.0"
open = "5.3.1"
urlencoding = "2.1"
which = "8.0.0"
sysinfo = "0.38.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
image = { version = "0.25", features = ["png", "jpeg", "ico"] }
base64 = "0.22"
futures-util = "0.3"
async-trait = "0.1"
dotenvy = "0.15"
notify = "8.1.0"
sha1 = "0.10"
sha2 = "0.10"

# OAuth2 and Microsoft authentication
oauth2 = "4.4.2"
minecraft-msa-auth = "0.4.0"
lazy_static = "1.5"
walkdir = "2.5.0"
murmur2 = "0.1.0"
tempfile = "3"
uuid = { version = "1.20.0", features = ["v3", "v4", "v1", "serde"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.1"

[target."cfg(target_os = \"windows\")".dependencies]
winver = "1.0.0"

[target."cfg(any(target_os = \"macos\", target_os = \"windows\", target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.3.7", features = ["deep-link"] }

[dev-dependencies]
tempfile = "3.24.0" 
